--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,5 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://kit.fontawesome.com/ca09a710ca.js" crossorigin="anonymous"></script>
 </html>
